Cut branch from 85zrn17hf-stage and checkbox spacing resolved

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -10549,6 +10549,17 @@ body.update-scroll-hidden {
             }
         }
     }
+
+    button.mat-menu-item {
+        height: 40px;
+        display: flex;
+        align-items: center;
+        padding: 0 6px !important;
+    }
+    .mat-menu-content {
+        padding-top: 2px !important;
+        padding-bottom: 2px !important;
+    }
 }
 
 .cdk-overlay-pane {
